# ya3Dv

./: CMakeLists.txt  README.md
include/: L2DFileDialog.hpp  data3d.hpp  file_dialog.hpp  filesystem.hpp  interpolations.hpp  mesh_io.hpp  object_3d.hpp  utils.hpp  window_ui.hpp
src/: demo_app.cpp  file_dialog.cpp  filesystem.cpp  interpolations.cpp  main.cpp  mesh_io.cpp  object_3d.cpp  utils.cpp  window_ui.cpp
